plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

ext {
	queryDslVersion = '5.0.0'
	lombokVersion = '1.18.32'
	jjwtVersion = '0.12.3'
	mysqlVersion = '8.4.0'
	jsoupVersion = '1.18.1'
	mapstructVersion = '1.6.3'
	jasyptVersion = '3.0.5'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Lombok
	implementation "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	// JWT
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	implementation "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	implementation "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

	// DB 및 기타
	implementation "com.mysql:mysql-connector-j:${mysqlVersion}"
	implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:${jasyptVersion}"
	implementation "org.jsoup:jsoup:${jsoupVersion}"

	// QueryDSL
	implementation "com.querydsl:querydsl-core:${queryDslVersion}"
	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"

	// MapStruct
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	// 기타 annotationProcessor
	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

clean {	delete file('src/main/generated')}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-parameters"
}
